28課題/学生管理を強化し、コース統合を実現
`StudentCoursesMapper` と `StudentMapper` を導入し、データ処理を効率化。学生とコースの保存メソッドや、Thymeleafテンプレートの更新、Spring Bootによるフォームバリデーションを実装。設定とログ機能も改善。